# goodlucklp

./: key.txt  lptokenps
forc/: 7-2-2.cpp  7-3-3.cpp  a.out  hislog.txt  libhello  main  mainstatic  tcpclient  tcpserver  test.cpp  test_main.cpp  test_mainstaic.cpp  test_pipe.cpp  test_sharelib.cpp  test_signal  test_signal.cpp  test_static.cpp  test_tcp_client.cpp  test_tcp_server.cpp  testtype.cpp
forc/0730/: a.out  test1.cpp
forc/1108/: CMakeLists.txt  input_device_manager.cpp  input_device_manager.h  input_type.h  inputtest  main.cpp
forc/cplustest/: a.out  filelist.cpp
forc/input/: .testinput.cpp.swp
forc/input/adapter/: BUILD.gn
forc/input/adapter/include/: input_action_reader.h  input_device_manager.h  input_host_adapter.h
forc/input/adapter/src/: input_action_reader.cpp  input_device_manager.cpp  input_host_adapter.cpp
forc/input/hal/: BUILD.gn
forc/input/hal/src/: input_manager.cpp
forc/input/interfaces/include/: input_type.h
forc/input/test/: BUILD.gn
forc/input/test/common/: hdi_input_test.cpp  hdi_input_test.h
forc/msgQ/: msgRev  msgSed  msgreceive.c  msgsend.c
forc/mulutithread/: a.out  threadstest.cpp  threadstest1.cpp
forc/sem/: sem  sem.c
forc/sharemem/: mread  mwrite  shmdata.h  shmread.c  shmwrite.c
forc/stltest/: a.out  list  listtest.cpp  maptest.cpp  vector.cpp
forc/template/: a.out  classtmp.cpp  functemp.cpp
forc/thread/: TestThread  TestThread.cpp  a.out  makefile
formemo/: a.out  maketime.cpp
